--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ html {
   overflow: hidden;
 }
 
+* {
+  font-family: "Times New Roman", Times, serif;
+}
+
 .fade-exit {
   filter: grayscale(0);
 }
