--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,20 @@
   src: url("/font/Cutmark-Bold.ttf");
 }
 @font-face {
+  font-family: "JACKPORT REGULAR NCV";
+  src: url("/font/JACKPORT REGULAR NCV.ttf");
+}
+@font-face {
   font-family: "Charter";
   src: url("/font/charter_regular.woff2");
 }
 @font-face {
   font-family: "Charter-Bold";
   src: url("/font/charter_bold.woff2");
+}
+
+rect {
+  shape-rendering: crispedges;
 }
 
 body {
